--- a/app/views/netinfo/posts/afterindex.html.erb
+++ b/app/views/netinfo/posts/afterindex.html.erb
@@ -4,7 +4,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pwd" style="margin-top:20px;">
-                    <p class="left-15">首页／无线知识</p>
+                    <p class="left-15">首页／网络知识</p>
                 </div>
             </div>
         </div>
@@ -44,19 +44,19 @@
                     <div class="space-50">
                     </div>
                     <div class="show-list-item">
-                        <%= link_to("无线1", wirelessinfo_afterindex_path(:subcate => "无线1") ) %>
+                        <%= link_to("网络1", netinfo_afterindex_path(:subcate => "网络1") ) %>
                     </div>
                     <div class="show-list-item">
-                        <%= link_to("无线2", wirelessinfo_afterindex_path(:subcate => "无线2")) %>
+                        <%= link_to("网络2", netinfo_afterindex_path(:subcate => "网络2")) %>
                     </div>
                     <div class="show-list-item">
-                        <%= link_to("无线3", wirelessinfo_afterindex_path(:subcate => "无线3")) %>
+                        <%= link_to("网络3", netinfo_afterindex_path(:subcate => "网络3")) %>
                     </div>
                     <div class="show-list-item">
-                        <%= link_to("无线4", wirelessinfo_afterindex_path(:subcate => "无线4")) %>
+                        <%= link_to("网络4", netinfo_afterindex_path(:subcate => "网络4")) %>
                     </div>
                     <div class="show-list-item">
-                        <%= link_to("无线5", wirelessinfo_afterindex_path(:subcate => "无线5")) %>
+                        <%= link_to("网络5", netinfo_afterindex_path(:subcate => "网络5")) %>
                     </div>
                 </div>
                 <div class="col-md-10 show-post" style="height:820px;">
