--- a/app/views/wirelessinfo/posts/index.html.erb
+++ b/app/views/wirelessinfo/posts/index.html.erb
@@ -54,7 +54,7 @@
             </div>
             <div class="row " style="margin-top:5px;">
                 <div class="col-md-12 text-center">
-                    <p class="index_more"><%= link_to("查看更多", wirelessinfo_afterindex_path(:subcate => "分类1")  )%></li>
+                    <p class="index_more"><%= link_to("查看更多", wirelessinfo_afterindex_path(:subcate => "无线1")  )%></li>
                 </p>
             </div>
         </div>
