--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,17 +4,33 @@
             <div class="preview-pic tab-content" >
                 <% if @product.photos.present? %>
                     <div class="tab-pane active" id="pic-1"><%= image_tag(@product.photos[0].image.medium.url) %></div>
-                    <div class="tab-pane" id="pic-2"><%= image_tag(@product.photos[1].image.medium.url) %></div>
-                    <div class="tab-pane" id="pic-3"><%= image_tag(@product.photos[2].image.medium.url) %></div>
-                    <div class="tab-pane" id="pic-4"><%= image_tag(@product.photos[3].image.medium.url) %></div>
-                    <div class="tab-pane" id="pic-5"><%= image_tag(@product.photos[4].image.medium.url) %></div>
+                    <% if @product.photos[1].present? %>
+                        <div class="tab-pane" id="pic-2"><%= image_tag(@product.photos[1].image.medium.url) %></div>
+                    <% end %>
+                    <% if @product.photos[2].present? %>
+                        <div class="tab-pane" id="pic-3"><%= image_tag(@product.photos[2].image.medium.url) %></div>
+                    <% end %>
+                    <% if @product.photos[3].present? %>
+                        <div class="tab-pane" id="pic-4"><%= image_tag(@product.photos[3].image.medium.url) %></div>
+                    <% end %>
+                    <% if @product.photos[4].present? %>
+                        <div class="tab-pane" id="pic-5"><%= image_tag(@product.photos[4].image.medium.url) %></div>
+                    <% end %>
                 </div>
                 <ul class="preview-thumbnail nav nav-tabs">
                     <li class="active"><a data-target="#pic-1" data-toggle="tab"><%= image_tag(@product.photos[0].image.thumb.url) %></a></li>
-                    <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag(@product.photos[1].image.thumb.url) %></a></li>
-                    <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag(@product.photos[2].image.thumb.url) %></a></li>
-                    <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag(@product.photos[3].image.thumb.url) %></a></li>
-                    <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag(@product.photos[4].image.thumb.url) %></a></li>
+                    <% if @product.photos[1].present? %>
+                        <li><a data-target="#pic-2" data-toggle="tab"><%= image_tag(@product.photos[1].image.thumb.url) %></a></li>
+                    <% end %>
+                    <% if @product.photos[2].present? %>
+                        <li><a data-target="#pic-3" data-toggle="tab"><%= image_tag(@product.photos[2].image.thumb.url) %></a></li>
+                    <% end %>
+                    <% if @product.photos[3].present? %>
+                        <li><a data-target="#pic-4" data-toggle="tab"><%= image_tag(@product.photos[3].image.thumb.url) %></a></li>
+                    <% end %>
+                    <% if @product.photos[4].present? %>
+                        <li><a data-target="#pic-5" data-toggle="tab"><%= image_tag(@product.photos[4].image.thumb.url) %></a></li>
+                    <% end %>
                 </ul>
             <% end %>
         </div>
