--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,9 +20,9 @@
                     <div class="col-xs-6 col-md-3 text-center" style="padding:0px 5px;margin-bottom:10px;">
                         <%= link_to product_path(product) do  %>
                             <% if product.photos.present? %>
-                                <%= image_tag(product.photos[0].image.thumb.url , class: "product-show-pic") %>
+                                <%= image_tag(product.photos[0].image.thumb.url , class: "product-show-pic img-responsive") %>
                             <% else %>
-                                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "product-show-pic") %>
+                                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "product-show-pic img-responsive") %>
                             <% end %>
                         <% end %>
                         <p class="bg-white product-show-slogan product-title2"> <%= product.title %> </p>
