--- a/app/assets/stylesheets/intros.scss
+++ b/app/assets/stylesheets/intros.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the intros controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.1425701 {
+  width: 1425px;
+  height: 701px;
+}
