--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
             <% if @intro1.image.present? %>
                 <%= image_tag(@intro1.image.ad1, :class => "width-100") %>
             <% else %>
-                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "1425701") %>
+                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "pic1425701") %>
             <% end %>
         </div>
     </div>
