--- a/app/assets/stylesheets/intros.scss
+++ b/app/assets/stylesheets/intros.scss
@@ -7,3 +7,28 @@
   width: 1425px;
   height: 701px;
 }
+
+.pic530270 {
+  width: 530px;
+  height: 270px;
+}
+
+.pic579276 {
+  width: 578px;
+  height: 276px;
+}
+
+.pic294580 {
+  width: 294px;
+  height: 580px;
+}
+
+.pic439229 {
+  width: 439px;
+  height: 229px;
+}
+
+.pic465335 {
+  width: 465px;
+  height: 335px;
+}
