cancel delete function

--- a/app/views/admin/intros/index.html.erb
+++ b/app/views/admin/intros/index.html.erb
@@ -29,7 +29,7 @@
                 </td>
                 <td>
                     <%= link_to("Edit",edit_admin_intro_path(intro))%>
-                    <%= link_to("Delete", admin_intro_path(intro),method: :delete,:data => { :confirm => "Are you sure?" }) %>
+                    <!-- <%= link_to("Delete", admin_intro_path(intro),method: :delete,:data => { :confirm => "Are you sure?" }) %> -->
                 </td>
             </tr>
         <% end %>
