--- a/app/views/admin/videos/index.html.erb
+++ b/app/views/admin/videos/index.html.erb
@@ -21,7 +21,7 @@
                 </td>
                 <td>
                     <%= link_to("Edit",edit_admin_video_path(video))%>
-                    <%= link_to("Delete", admin_video_path(video),method: :delete,:data => { :confirm => "Are you sure?" }) %>
+                    <!-- <%= link_to("Delete", admin_video_path(video),method: :delete,:data => { :confirm => "Are you sure?" }) %> -->
                 </td>
             </tr>
         <% end %>
