--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,23 @@
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="row user_setup">
+    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 user_setup_content">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h2><span class="fa fa-share"></span> 忘记密码？</h2>
+                <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                    <div class="form-inputs">
+                        <%= f.input :email, :label => false, placeholder: "邮箱", error: "请输入您的邮箱", required: true, autofocus: true %>
+                    </div>
+                    <div class="form-actions">
+                        <%= f.button :submit, "取回密码",class: "button" %>
+                    </div>
+                <% end %>
+                <hr />
+                <div class="account">
+                    <%= link_to "已经是Convolum会员？点此登陆", new_session_path(resource_name) %><br/>
+                    <br/>
+                    <%= link_to "现在就加入Convolum", new_registration_path(resource_name) %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
