--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,23 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="row user_setup">
+    <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 user_setup_content">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h2><span class="fa fa-user-circle-o"></span> 注册</h2>
+                <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                    <div class="form-inputs">
+                        <%= f.input :email, :label => false, placeholder: "邮箱", error: "请输入您的电子邮箱", required: true, autofocus: true %>
+                        <%= f.input :password, :label => false, placeholder: "密码", error: "请输入密码", required: true %>
+                        <%= f.input :password_confirmation, :label => false, placeholder: "确认密码", error: "请确认密码", required: true  %>
+                    </div>
+                    <div class="form-actions">
+                        <%= f.button :submit, "注册",class: "button" %>
+                    </div>
+                <% end %>
+                <hr />
+                <div class="account">
+                    <%= link_to "已经是Convolum会员？点此登陆", new_session_path(resource_name)%><br />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
