--- a/app/views/admin/intros/index.html.erb
+++ b/app/views/admin/intros/index.html.erb
@@ -2,7 +2,7 @@
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新建广告", new_admin_intro_path, class:"btn btn-primary btn-sm")%>
 </div>
-<table class="table table-bordered">
+<table class="table table-bordered commonlink">
     <thead>
         <tr>
             <th>#</th>
