--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -1,5 +1,5 @@
 <h2> Messages List </h2>
-<table class="table table-bordered">
+<table class="table table-bordered commonlink">
     <thead>
         <tr>
             <th>#</th>
