--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -458,3 +458,20 @@ body {
     }
   }
 }
+
+
+.commonlink {
+  a {
+    color: #263238;
+    text-decoration: none;
+  }
+  a:hover,
+  a:focus {
+    color: #1690dc;
+    text-decoration: underline;
+  }
+  a:focus {
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+  }
+}
