--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,5 +1,5 @@
 <h2>订单列表</h2>
-<table class="table table-bordered">
+<table class="table table-bordered commonlink">
     <thead>
         <tr>
             <th>#</th>
