--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -2,7 +2,7 @@
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新增文章", new_admin_post_path, class: "btn btn-primary btn-sm") %>
 </div>
-<table class="table table-bordered">
+<table class="table table-bordered commonlink">
     <thead>
         <tr>
             <th>#</th>
