--- a/app/views/netinfo/posts/afterindex.html.erb
+++ b/app/views/netinfo/posts/afterindex.html.erb
@@ -11,30 +11,7 @@
     </div>
 </div>
 <!-- search -->
-<div class="row" style="margin-top:10px;">
-    <div class="col-md-12">
-        <div class="search-box">
-            <div class="container-fluid">
-                <div class="row" style="margin-top:80px;">
-                    <div class="col-md-4 col-md-offset-4">
-                        <div class="search-bar">
-                            <%= form_tag search_products_path , :method => :get  do %>
-                                <div class="input-group" id="search-id" >
-                                    <input type="text" class="search-input" name="q" value="<%= params[:q] %>" placeholder="请输入您的问题...">
-                                    <div class="input-group-btn ">
-                                        <button class="btn  search-icon" type="submit">
-                                            <i class="fa fa-search" style="color:#fff;font-size:26px;"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            <% end %>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<%= render "common/searchbar" %>
 <!-- main part -->
 <div class="row">
     <div class="col-md-8 col-md-offset-2" style="position:relative;left:0px;top:-60px;">
