--- a/app/views/admin/intros/index.html.erb
+++ b/app/views/admin/intros/index.html.erb
@@ -1,4 +1,4 @@
-<h2> 广告 List </h2>
+<h2> 广告列表</h2>
 <div class="pull-right" style="padding-bottom: 20px;">
     <%= link_to("新建广告", new_admin_intro_path, class:"btn btn-primary btn-sm")%>
 </div>
