--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,15 +1,15 @@
-<h2>Product List</h2>
+<h2 style="text-align:center;" class="space-50">产品列表</h2>
 <div class="pull-right" style="padding-bottom: 20px;">
-    <%= link_to("新增产品", new_admin_product_path, class:"btn btn-primary btn-sm")%>
+    <%= link_to("新增产品", new_admin_product_path, class:"btn btn-primary btn-md")%>
 </div>
-<table class="table table-bordered commonlink">
+<table class="table commonlink">
     <thead>
         <tr>
-            <th>#</th>
-            <th width="220">Product Pic</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th width="300">Options</th>
+            <th>ID</th>
+            <th width="220">产品封面图</th>
+            <th>名称</th>
+            <th>分类</th>
+            <th width="300">选项</th>
         </tr>
     </thead>
     <tbody>
@@ -35,13 +35,13 @@
                     <%= product.category %>
                 </td>
                 <td>
-                    <%= link_to("Edit",edit_admin_product_path(product))%>
-                    |<%= link_to("Destroy", admin_product_path(product), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+                    <%= link_to("编辑",edit_admin_product_path(product))%>
+                    |<%= link_to("删除", admin_product_path(product), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
                     |
                     <% if product.is_hidden %>
-                        <%= link_to("Publish", publish_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
+                        <%= link_to("公开", publish_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
                     <% else %>
-                        <%= link_to("Hide", hide_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
+                        <%= link_to("隐藏", hide_admin_product_path(product), :method => :post, :class => "btn btn-xs btn-default") %>
                     <% end %>
                     |
                     <%= link_to "向上", move_up_admin_product_path(product), method: :patch %>
@@ -52,4 +52,6 @@
         <% end %>
     </tbody>
 </table>
-<%= will_paginate @products , class: "apple_pagination"%>
+<%= will_paginate @products , class: "apple_pagination_white"%>
+<div class="space-50">
+</div>
