--- a/app/views/admin/messages/index.html.erb
+++ b/app/views/admin/messages/index.html.erb
@@ -1,11 +1,11 @@
-<h2> Messages List </h2>
-<table class="table table-bordered commonlink">
+<h2 style="text-align:center;" class="space-50">留言列表</h2>
+<table class="table commonlink space-30">
     <thead>
         <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th> Comment</th>
+            <th>ID</th>
+            <th>姓名</th>
+            <th>邮箱</th>
+            <th>意见或问题</th>
             <th>选项</th>
         </tr>
     </thead>
@@ -25,10 +25,12 @@
                     <%= message.comment %>
                 </td>
                 <td>
-                    <%= link_to("Delete", admin_message_path(message),method: :delete,:data => { :confirm => "Are you sure?" }) %>
+                    <%= link_to("删除", admin_message_path(message),method: :delete,:data => { :confirm => "Are you sure?" }) %>
                 </td>
             </tr>
         <% end %>
     </tbody>
 </table>
-<%= will_paginate @messages, class: "apple_pagination" %>
+<%= will_paginate @messages, class: "apple_pagination_white" %>
+<div class="space-50">
+</div>
