--- a/app/views/admin/intros/new.html.erb
+++ b/app/views/admin/intros/new.html.erb
@@ -1,2 +1,2 @@
-<h2><span class="fa fa-file-text-o"></span>新建广告</h2>
+<h2 class="center space-50"><span class="fa fa-file-text-o"></span> 新建广告</h2>
 <%= render('form') %>
