--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -4,18 +4,23 @@
         <div class="group">
             <%= f.input :title ,:label => "产品名称"%>
         </div>
+        <br>
         <div class="group">
             <%= f.input :slogan ,:label => "宣传语"%>
         </div>
+        <br>
         <div class="group">
             <%= f.input :description ,:label => "产品描述"%>
         </div>
+        <br>
         <div class="group">
             <%= f.input :quantity ,:label => "数量"%>
         </div>
+        <br>
         <div class="group">
             <%= f.input :price ,:label => "价格"%>
         </div>
+        <br>
         <div class="group">
             <% Product::CATEGORY.each do |category| %>
                 <label>
@@ -24,24 +29,33 @@
                 </label>
             <% end %>
         </div>
+        <br>
         <div class="group">
             <% if @product.new_record? %>
             <% else %>
                 <% if @product.photos.present? %>
                     <span>目前商品图</span><br>
                     <% @product.photos.each do |p| %>
-                        <%= image_tag p.image.thumb.url %><br />
+                        <%= image_tag p.image.thumb.url %><br/>
                     <% end %>
                 <% end %>
             <% end %>
+            <br>
             <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
     </div>
+        <br>
         <div class="group">
             <%= f.input :attachment ,:label => "产品PDF"%>
         </div>
+        <br>
         <div class="group">
             <%= f.input :is_hidden ,:label => "勾选为隐藏"%>
         </div>
-        <%= f.submit "提交", data: { disable_with: "Submitting..." } %>
+        <br>
+        <div class="form-actions">
+            <%= f.submit "提交", class: 'btn btn-md btn-primary' %>
+        </div>
     <% end %>
+    <div class="space-50">
+    </div>
 </div>
