--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,2 +1,2 @@
-<h2><span class="fa fa-pencil-square-o"></span>编辑产品</h2>
+<h2 class="center space-50"><span class="fa fa-pencil-square-o"></span> 编辑产品</h2>
 <%= render('form') %>
