--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -12,9 +12,9 @@
         <% @orders.each do |order| %>
             <tr>
                 <td><%= link_to(order.id, admin_order_path(order))%></td>
-                <td><%= order.created_at.to_s(:long)%></td>
+                <td><%= order.created_at.strftime("%Y-%m-%d - %H:%M")%></td>
                 <td><%= order.user.email%></td>
-                <td><%= order.aasm_state%></td>
+                <td><%= render_order_paid_state(order)%></td>
             </tr>
         <% end %>
     </tbody>
