--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row center space-50">
     <div class="col-md-12">
         <h2>订单明细(<%= render_order_paid_state(@order)%>)</h2>
         <%= render "admin/orders/state_option",order: @order%>
-        <table class="table table-bordered">
+        <table class="table">
             <thead>
                 <tr>
                     <th>商品明细</th>
@@ -31,13 +31,12 @@
                 总计<%= @order.total %> CNY
       </span>
         </div>
-        <hr>
-        <h2>寄送资讯</h2>
-        <table class="table table-striped table-bordered">
+        <h2 class="center space-50">寄送资讯</h2>
+        <table class="table">
             <tbody>
                 <tr>
                     <td>
-                        订购人
+                        付款信息
           </td>
                 </tr>
                 <tr>
@@ -47,7 +46,7 @@
                 </tr>
                 <tr>
                     <td>
-                        收件人
+                        寄送信息
           </td>
                 </tr>
                 <tr>
@@ -57,5 +56,7 @@
                 </tr>
             </tbody>
         </table>
+        <div class="space-50">
+        </div>
     </div>
 </div>
