--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <%= @order.billing_name %> - <%= @order.billing_address %>
+                        <%= @order.billing_name %> - <%= @order.billing_phone %>
                     </td>
                 </tr>
                 <tr>
