--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -39,7 +39,7 @@
                     <%= f.input :billing_name %>
                 </div>
                 <div class="form-group col-lg-6">
-                    <%= f.input :billing_address %>
+                    <%= f.input :billing_phone %>
                 </div>
                 <legend>收货人</legend>
                 <div class="form-group col-lg-6">
