--- a/app/views/order_mailer/notify_ship.html.erb
+++ b/app/views/order_mailer/notify_ship.html.erb
@@ -48,7 +48,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <%= @order.billing_name %> - <%= @order.billing_address %>
+                        <%= @order.billing_name %> - <%= @order.billing_phone %>
                     </td>
                 </tr>
                 <tr>
