--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <%= @order.billing_name%> - <%= @order.billing_address%>
+                        <%= @order.billing_name%> - <%= @order.billing_phone%>
                     </td>
                 </tr>
                 <tr>
