--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -102,3 +102,128 @@
   font-size: 16px;
   // width: 232px;
 }
+
+//show page details
+
+.product-show-part {
+
+
+.product-details {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.product-title {
+  margin-top: 0;
+}
+
+.price-service{
+  // background-color: rgb(245,245,245);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #666;
+  border-top: 1px dotted #dedede;
+  border-bottom: 1px dotted #dedede;
+  p.price{
+    span.rmb{
+      color: #d7282d;
+      margin-left: 20px;
+    }
+    span.price{
+      color: #d7282d;
+      font-size: 30px;
+    }
+  }
+  p.service{
+    span.service-detail{
+      margin-left: 20px;
+    }
+  }
+}
+.quantity-size{
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #666;
+  p.quantity{
+    span.quantity{
+      margin-left: 20px;
+    }
+  }
+  p.sizes{
+    span.sizes{
+      margin-left: 20px;
+    }
+  }
+  p.delivery{
+    span.delivery{
+      margin-left: 20px;
+    }
+  }
+
+}
+
+a.btn:hover{
+  opacity:0.7;
+  color:#fff;
+}
+
+a.btn{
+height:40px;
+font-size: 18px;
+}
+
+.action {
+  margin-top:30px;
+  padding-left:0;padding-right:0px;
+  .col-md-10{
+    padding-left:0;padding-right:0px;
+  }
+  .col-md-2{
+    padding-left:10px;padding-right:0px;
+  }
+  a.buy{
+    background-color:#37474F;color: #fff;margin-bottom:10px;
+  }
+  a.add-to-cart{
+    border-color:#37474F;background-color:#fff;color:#37474F;
+  }
+
+}
+.favor{
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #666;
+}
+
+.share{
+  color:#666;
+  margin-top:30px;
+  hr{
+    border-top: 1px dotted #dedede;
+    margin-right: 15px;
+  }
+}
+$size: 20px;
+
+div.social-share-button {
+  margin: 0;
+
+  .ssb-icon {
+    background-size: $size $size;
+    height: $size;
+    width: $size;
+    border-radius: 50%;
+        margin-right:0px;
+  }
+}
+
+}
