--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-12">
-        <div class="preview col-md-6 " >
+    <div class="col-md-10 col-md-offset-1 bg-white space-50">
+        <div class="preview col-md-7  space-50" >
             <div class="preview-pic tab-content" >
                 <% if @product.photos.present? %>
                     <div class="tab-pane active" id="pic-1"><%= image_tag(@product.photos[0].image.medium.url) %></div>
@@ -33,35 +33,64 @@
                     <% end %>
                 </ul>
             <% end %>
+            <div class="space-30">
+            </div>
+        </div>
+        <div class="product-show-part">
+            <div class="product-details col-md-5 space-50 ">
+                <h3><%= @product.title %></h3>
+                <h4><%= @product.slogan %></h4>
+                <div class="price-service">
+                    <p class="price space-20">售价 <span class="rmb">￥</span><span class="price"><%= @product.price %></span></p>
+                    <p class="service">服务 <span class="service-detail">7天无忧退货 | 48小时快速退款 | 正品保证</span></p>
+                    <div class="space-30">
+                    </div>
+                </div>
+                <div class="quantity-size">
+                    <p class="delivery space-20">类别 <span class="delivery"><%= @product.category %></span></p>
+                    <p class="quantity">库存 <span class="quantity"><%= @product.quantity %></span> </p>
+                    <div style="margin-top:200px;">
+                    </div>
+                </div>
+                <div class="action space-20">
+                    <div class="col-md-12">
+                        <% if @product.quantity.present? && @product.quantity > 0 %>
+                            <%= link_to("立即购买", instant_buy_product_path(@product), class: "buy btn btn-block ",  :method => :post) %>
+                        <% else %>
+                            已销售一空，无法购买
+                    <% end %>
+                    </div>
+                    <div class="col-md-12" >
+                        <% if @product.quantity.present? && @product.quantity > 0 %>
+                            <%= link_to("加入购物车", add_to_cart_product_path(@product), class: "add-to-cart btn btn-block ",:method => :post) %>
+                        <% else %>
+                            已销售一空，无法购买
+                     <% end %>
+                    </div>
+                </div>
+                <div class="row share">
+                    <hr />
+                    <div class="col-md-6">
+                        <% if @product.attachment.present? %>
+                            <i class="fa fa-paperclip"> </i>
+                            <%= link_to("点击下载产品PDF", @product.attachment_url) %>
+                        <% else %>
+                            暂无产品PDF提供下载
+                        <% end %>
+                    </div>
+                    <div class="col-md-6 ">
+                        <p><i class="fa fa-share-alt" aria-hidden="true"></i> 分享 </p>
+                    </div>
+                </div>
+                <div class="space-30">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-12">
-        <h2><%= @product.title %></h2>
-        <div style="height:100px;">
-            <p>
-                <%= @product.description %>
-            </p>
-        </div>
-        <div class="product-price">
-            ¥ <%= @product.price %>
-        </div>
-        <div class="col-md-12">
-            <%= @product.category %>
-        </div>
-        <div class="pull-left">
-            <% if @product.attachment.present? %>
-                <i class="fa fa-paperclip"> </i>
-                <%= link_to("Download Handbook", @product.attachment_url) %>
-            <% else %>
-                No Attachment
-          <% end %>
-        </div>
-        <div class="pull-right">
-            <% if @product.quantity.present? && @product.quantity > 0 %>
-                <%= link_to("加入购物车",add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger")%>
-            <% else %>
-                已销售一空，无法购买
-            <% end %>
+    <div class="col-md-10 col-md-offset-1 bg-white space-20">
+        <h3 class="space-30">商品详情：</h3>
+        <div class="post-description space-30">
+            <%= raw @product.description %>
         </div>
     </div>
 </div>
