--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -79,6 +79,7 @@
                 </div>
             <% else %>
                 <!-- 如果购物车没有商品 -->
+                <h3 class="center">您尚未加入任何商品</h3>
             <% end %>
         </div>
     </div>
